--- a/task/task03-3.html
+++ b/task/task03-3.html
@@ -18,5 +18,6 @@
     </form>
     <!-- jQueryの読み込み -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="task03-3.js"></script>
 </body>
 </html>
