--- a/task/task03-5.html
+++ b/task/task03-5.html
@@ -25,6 +25,6 @@
   <script src="https://jpostal-1006.appspot.com/jquery.jpostal.js"></script>
 
   <!-- 自作JavaScriptの読み込み -->
-  <script src="test09.js"></script>
+  <script src="task03-5.js"></script>
 </body>
 </html>
